lang/tests/snapshots/parser/parse_error_expression_interior.snap
---
source: lang/tests/parser.rs
---
error: expected one of '(', positive integer, identifier, operator, 'fun', ..., found '}'
   ╭─[ test.zippel:1:42 ]
   │
 1 │ fn f<F: Field>(instance a: F) -> F { a + }
   │                                      ─┬─ ┬  
   │                                       │  ╰── expected one of '(', positive integer, identifier, operator, 'fun', ...
   │                                       │     
   │                                       ╰───── while parsing this expression
───╯
