lang/tests/snapshots/parser/parse_error_missing_rparen.snap
---
source: lang/tests/parser.rs
---
error: expected ',' or ')', found '->'
   ╭─[ test.zippel:1:30 ]
   │
 1 │ fn f<F: Field>(instance a: F -> F { a }
   │                ──────┬────── ─┬  
   │                      │        ╰── expected ',' or ')'
   │                      │           
   │                      ╰─────────── while parsing this argument list
───╯
