lang/tests/snapshots/parser/parse_error_missing_semi_in_where.snap
---
source: lang/tests/parser.rs
---
error: expected one of operator, ',', '..', call arguments, '[', ..., found 'c'
   ╭─[ test.zippel:1:47 ]
   │
 1 │ proto p<F: Field>(instance a: F) where a == b c == d { () }
   │                                             ┬ ┬  
   │                                             │ ╰── expected one of operator, ',', '..', call arguments, '[', ...
   │                                             │    
   │                                             ╰──── while parsing this expression
───╯
