lang/tests/snapshots/parser/parse_error_missing_typevar_name.snap
---
source: lang/tests/parser.rs
---
error: expected generic parameters or '>', found ':'
   ╭─[ test.zippel:1:6 ]
   │
 1 │ fn f<: Field>(instance a: F) -> F { a }
   │ ──┬──┬  
   │   │  ╰── expected generic parameters or '>'
   │   │     
   │   ╰───── while parsing this declaration
───╯
