lang/tests/snapshots/parser/parse_error_type_alias_missing_eq.snap
---
source: lang/tests/parser.rs
---
error: expected '=', found 'F'
   ╭─[ test.zippel:1:14 ]
   │
 1 │ type MyAlias F;
   │ ──────┬───── ┬  
   │       │      ╰── expected '='
   │       │         
   │       ╰───────── while parsing this type alias
───╯
