lang/tests/snapshots/parser/parse_error_type_alias_missing_semi.snap
---
source: lang/tests/parser.rs
---
error: expected ';', found end of input
   ╭─[ test.zippel:1:17 ]
   │
 1 │ type MyAlias = F
   │ ────────┬───────│ 
   │         │       ╰─ expected ';'
   │         │         
   │         ╰───────── while parsing this type alias
───╯
