lang/tests/snapshots/parser/parse_error_unexpected_token_after_fn.snap
---
source: lang/tests/parser.rs
---
error: expected '<', found 'F'
   ╭─[ test.zippel:1:6 ]
   │
 1 │ fn f F: Field>(instance a: F) -> F { a }
   │ ──┬─ ┬  
   │   │  ╰── expected '<'
   │   │     
   │   ╰───── while parsing this declaration
───╯
